syntax = "proto3";

import "app/improving/store/domain/store_context_domain.proto";
import "common_domain.proto";


package app.improving.storecontext.store;

message Store {
    StoreId store_id = 1;
    StoreInfo info = 2;
    StoreMetaInfo meta = 3;
    StoreStatus status = 4;
}

message StoreState {
    Store store = 1;
}
